fix: z-index for gradient in desktop

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -277,6 +277,7 @@ h3 {
     width: 500px;
     height: 500px;
     opacity: 0.75;
+    z-index: -1;
   }
 }
 
